--- a/www/sass/main.scss
+++ b/www/sass/main.scss
@@ -593,7 +593,7 @@
       }
     }
 
-    * {
+    *:not(iframe) {
       max-width: 100%;
       height: auto;
     }
